[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tof"
version = "0.1.1"
description = "A simple tool to create time-of-flight chopper cascade diagrams"
license = {text = "BSD-3-Clause"}
authors = [{name = "Neil Vaytet"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "importlib-resources",
    "matplotlib",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["./src"]

[tool.black]
skip-string-normalization = true
