[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tof"
dynamic = ["version"]
description = "A simple tool to create time-of-flight chopper cascade diagrams"
license = {text = "BSD-3-Clause"}
authors = [{name = "Neil Vaytet"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "importlib-resources",
    "plopp",
    "scipp",
    "scipy",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["./src"]

[tool.bandit]
# Excluding tests because bandit doesn't like `assert`.
exclude_dirs = ["docs/conf.py", "tests", "install"]

[tool.codespell]
ignore-words-list = "elemt"
skip = "./.git,./install,./build,./.tox,*/*_cache,*/.virtual_documents,*/.ipynb_checkpoints,*.pdf,*.svg"

[tool.black]
skip-string-normalization = true

[tool.isort]
skip_gitignore = true
profile = "black"

[tool.ruff.format]
quote-style = "preserve"
